--- a/Editor/Resources/UI/styles.uss
+++ b/Editor/Resources/UI/styles.uss
@@ -935,7 +935,7 @@ RadioButton * {
 }
 
 .dark PrefabItemButton {
-    background-color: "#1c304a";
+    background-color: #1c304a;
     border-color: var(--default);
 }
 
@@ -944,7 +944,7 @@ RadioButton * {
 }
 
 .dark PrefabItem {
-    background-color: "#1c304a";
+    background-color: #1c304a;
     color: black;
     border-color: var(--default);
 }
