Add Genre, setting window

--- a/Editor/Resources/UI/TabContents/ImportSettings/Contents/PrefabItem.uxml
+++ b/Editor/Resources/UI/TabContents/ImportSettings/Contents/PrefabItem.uxml
@@ -15,14 +15,11 @@
         <ui:VisualElement name="miscellaneous" class="flex-col items-start" />
     </ui:VisualElement>
     <ui:VisualElement name="controls" class="flex-col h-full">
-        <ui:Button name="changeNameButton" class="rounded-bl-none rounded-br-none group-button">
+        <ui:Button name="settingsButton" class="rounded-bl-none rounded-br-none group-button">
             <eau:MaterialIcon icon="edit" />
         </ui:Button>
-        <ui:Button name="copyAsNewNameButton" class="group-button__center">
-        	<eau:MaterialIcon icon="content_copy" />
-        </ui:Button>
         <ui:Button name="deleteButton" class="rounded-tl-none rounded-tr-none group-button">
-			<eau:MaterialIcon icon="delete" />
+            <eau:MaterialIcon icon="delete" />
         </ui:Button>
     </ui:VisualElement>
 </ui:UXML>
